<resources>
    <string name="app_name">TeamUp</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDEyY9lFISRLXabmu67yQOQ9fIhHKYYH5I</string>
    <string name="newSportEvent">Nová sportovní akce</string>
    <string name="name">Jméno</string>
    <string name="eventName">Název akce</string>
    <string name="maxPeople">Maximální počet účastníků</string>
    <string name="actualPeople">Aktuální počet účastníků</string>
    <string name="monday">Pondělí</string>
    <string name="tuesday">Úterý</string>
    <string name="wednesday">Středa</string>
    <string name="thursday">Čtvrtek</string>
    <string name="friday">Pátek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Neděle</string>
    <string name="lowMaxPeople">Maximální počet lidí musí být alespoň 2.</string>
    <string name="lowerActualThanMaxPeople">Aktuální počet lidí musí být menší než maximální.</string>
    <string name="emptyEventName">Vyplňte prosím název akce.</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="signingIn">Přihlašování...</string>
    <string name="tryAgain">ZKUSIT ZNOVU</string>
    <string name="signInNotSuccssesful">Přihlášení se nezdařilo, zkontrolujte připojení</string>
    <string name="successfulyCreated">Sportovní událost úspěšně vytvořena.</string>
    <string name="adding">Vytváření...</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="place">Místo</string>
    <string name="date">Datum</string>
    <string name="time">Čas</string>
    <string name="title">Název</string>
    <string name="addEventActivity">Nová sportovní aktivita</string>
    <string name="notCorrectLoad">Sportovní událost se nenačetla správně.</string>
    <string name="participants">Účastníci</string>
    <string name="join">Přidat se</string>
    <string name="menu_action_active_events">Nadcházející události</string>
    <string name="menu_action_history">Historie</string>
    <string name="menu_action_signout">Odhlásit se</string>
    <string name="signedParitcipants">Přihlášení účastníci</string>
    <string name="history">Historie</string>
    <string name="youAreIn">Jste na soupisce!</string>
    <string name="removeFromEvent">Odebrat se z aktivity</string>
    <string name="removedFromEvent">Byl jste odebrán ze soupisky</string>
    <string name="myEvents">Moje události</string>
    <string name="menu_action_my_events">Moje události</string>
    <string name="creating">Přidávání</string>
    <string name="removing">Odebírání</string>
    <string name="extraParticipants"> + %d účastník</string>
    <string name="extraParticipantsFour">+ %d účastníci</string>
    <string name="extraParticipantsFive">+ %d účastníků</string>
    <string name="km">km</string>
    <string name="enableGPS">Zapněte GPS, pokud chcete vidět vzdálenosti.</string>
    <string name="recreateEvent">Znovu udělat událost</string>
</resources>
