<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutMainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HistoryActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarView">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/headerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/headerLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/place"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/headerDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/date"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/headerTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/time"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>